crates/next-custom-transforms/tests/errors/server-actions/server-graph/18/input.js
export async function fn() {
  ('use cache')
}
